--- a/HomomorphicHashing/WorkingHomomorphicHashing.ipynb
+++ b/HomomorphicHashing/WorkingHomomorphicHashing.ipynb
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 24,
       "metadata": {
         "id": "Fgrlrbne10Z_"
       },
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "wr2MJouw9Zy-"
       },
-      "execution_count": 65,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "75-X0Cg63Jk-"
       },
-      "execution_count": 66,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
       "metadata": {
         "id": "Wq0c5dI48yP1"
       },
-      "execution_count": 67,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
       "metadata": {
         "id": "rN1Rmmqt82Ea"
       },
-      "execution_count": 68,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "oLVgrXzA8V7n"
       },
-      "execution_count": 69,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -170,13 +170,13 @@
       "metadata": {
         "id": "37Om2DGu8lur"
       },
-      "execution_count": 80,
+      "execution_count": 30,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def client_hash(x: list, g: list, q: list, p: list, k = [1 for j in range(BLOCK_LEN)])  -> tuple:\n",
+        "def client_hash(x: list, g: list, q: list, p: list, k = [1 for j in range(BLOCK_LEN)])  -> list:\n",
         "    '''\n",
         "    implements \"add\": g^k(a+b) (mod q)\n",
         "    # to compute the hash:\n",
@@ -191,12 +191,12 @@
         "            sums[i] += (x[j][i] % p[i])\n",
         "        sums[i] %= p[i]\n",
         "        hashed_sums[i] = HomoHash(g[i], q[i], k[i]*(sums[i]))\n",
-        "    return sums, hashed_sums"
+        "    return hashed_sums"
       ],
       "metadata": {
         "id": "ov8RwO9t8dyx"
       },
-      "execution_count": 81,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -210,9 +210,8 @@
         "    ## compute the hash of each individual character by raising g to the power of the character (mod q)\n",
         "    ## compute the \"sum\" of the hashes of the individual characters by multiplying them (mod q)\n",
         "    '''\n",
-        "\n",
         "    hashed_products = [[1 for j in range(BLOCK_LEN)] for i in range(len(x))]\n",
-        "    products = [0 for j in range(BLOCK_LEN)]\n",
+        "    products = [1 for j in range(BLOCK_LEN)]\n",
         "    # for i in range(0, PASS_LEN//BLOCK_LEN + 1): product *= pow(g, q, x[i]%p)\n",
         "    for i in range(BLOCK_LEN):\n",
         "        for j in range(len(x)):\n",
@@ -220,13 +219,14 @@
         "            hashed_products[j][i] = temp\n",
         "            products[i] *= temp\n",
         "            products[i] %= q[i]\n",
-        "    print(hashed_products)\n",
+        "    print(products)\n",
+        "    # print(hashed_products)\n",
         "    return products, hashed_products"
       ],
       "metadata": {
         "id": "NKR0WUZe8gqp"
       },
-      "execution_count": 82,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -250,27 +250,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IOWUDote2IVm",
-        "outputId": "bda7e10a-d1d3-463d-c362-4aac2c4ab89f"
+        "outputId": "fb934ef7-c27e-429d-98a7-c7b11a2a6951"
       },
-      "execution_count": 83,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "qwertyuiop\n",
             "[[113, 119, 101, 114, 116], [121, 117, 105, 111, 112]]\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Constants used in the hash function"
-      ],
-      "metadata": {
-        "id": "9NSJxDOT89-P"
-      }
     },
     {
       "cell_type": "code",
@@ -285,9 +277,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F3d35vFX3fiC",
-        "outputId": "ae3a294f-b295-4c76-f37b-dfae3804ad51"
+        "outputId": "91fd868b-4f02-4806-f366-b2959a3fc2dd"
       },
-      "execution_count": 74,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,19 +301,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d95JbPTs3iry",
-        "outputId": "3cea3e9f-2c83-4d3d-bb3e-f96e92e24f57"
+        "outputId": "f298ad8a-d88a-4ae0-e7ec-f2a8b033d6db"
       },
-      "execution_count": 75,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "keygen(101): [607, 809, 1213, 3637, 4243] - 1213\n",
-            "keygen(103): [619, 1031, 1237, 2267, 2473] - 619\n",
-            "keygen(107): [643, 857, 1499, 2141, 3853] - 1499\n",
-            "keygen(109): [1091, 2399, 2617, 3271, 5233] - 2399\n",
-            "keygen(113): [227, 1583, 2713, 2939, 3391] - 2713\n"
+            "keygen(101): [607, 809, 1213, 3637, 4243] - 809\n",
+            "keygen(103): [619, 1031, 1237, 2267, 2473] - 2267\n",
+            "keygen(107): [643, 857, 1499, 2141, 3853] - 857\n",
+            "keygen(109): [1091, 2399, 2617, 3271, 5233] - 1091\n",
+            "keygen(113): [227, 1583, 2713, 2939, 3391] - 1583\n"
           ]
         }
       ]
@@ -330,10 +322,9 @@
       "cell_type": "code",
       "source": [
         "## a random number g\n",
-        "g = [random.randint(100, 500) for i in range(BLOCK_LEN)] # public\n",
+        "g = [random.randint(50, 100) for i in range(BLOCK_LEN)] # public\n",
         "## generate fuzz factors k\n",
-        "k = [random.randint(15, 100) for i in range(BLOCK_LEN)] # private\n",
-        "# hashes computed at each server, same length as the input + padding\n",
+        "k = [random.randint(15, 50) for i in range(BLOCK_LEN)] # private\n",
         "print(f'g: {g}')\n",
         "print(f'k: {k}')"
       ],
@@ -342,16 +333,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MvzdF-_p3lle",
-        "outputId": "41615af2-b058-4053-f70c-d9a757d6edff"
+        "outputId": "da895916-3d9a-4d7d-c6fb-ee18ea159fd9"
       },
-      "execution_count": 76,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "g: [266, 126, 339, 447, 175]\n",
-            "k: [61, 98, 94, 65, 64]\n"
+            "g: [64, 51, 86, 99, 85]\n",
+            "k: [16, 22, 47, 41, 28]\n"
           ]
         }
       ]
@@ -359,68 +350,115 @@
     {
       "cell_type": "code",
       "source": [
+        "'''\n",
         "Hs1 = client_hash(m, g, q, p)\n",
-        "Hp1, S1 = server_hash(m, g, q, p)\n",
+        "\n",
+        "# hashes computed at each server, same length as the input + padding\n",
+        "Hp1 = server_hash(m, g, q, p)\n",
         "\n",
         "Hs = client_hash(m, g, q, p, k)\n",
-        "Hp, S = server_hash(m, g, q, p, k)"
+        "\n",
+        "# hashes computed at each server, same length as the input + padding - it has also been obfuscated\n",
+        "\n",
+        "Hp = server_hash(m, g, q, p, k)\n",
+        "'''"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 90
         },
         "id": "_cZlwdSZ2M6O",
-        "outputId": "8db74470-7d5a-4e93-d288-385faaab6a6d"
+        "outputId": "7a07d8f2-3b6a-472c-8748-32b47fafc608"
       },
-      "execution_count": 84,
+      "execution_count": 37,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[1115, 527, 93, 883, 1200], [180, 114, 1006, 1985, 2682]]\n",
-            "[[1127, 51, 511, 2325, 1383], [1195, 73, 1211, 1538, 1959]]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nHs1 = client_hash(m, g, q, p)\\n\\n# hashes computed at each server, same length as the input + padding\\nHp1 = server_hash(m, g, q, p)\\n\\nHs = client_hash(m, g, q, p, k)\\n\\n# hashes computed at each server, same length as the input + padding - it has also been obfuscated\\n\\nHp = server_hash(m, g, q, p, k)\\n'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 37
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Bg4TPN5XHPau"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
+        "print(\"\")\n",
+        "print(\"Clean data: \")\n",
+        "print(\"\\nClient side:\")\n",
         "print(client_hash(m, g, q, p))\n",
-        "print(server_hash(m, g, q, p))\n",
-        "\n",
+        "print(\"\\nServer side: \")\n",
+        "tmp = server_hash(m, g, q, p)\n",
+        "print(\"\\nIndividual server computation: \")\n",
+        "print(tmp[1])\n",
+        "print(\"\\nNetwork wide computation: \")\n",
+        "print(tmp[0])\n",
+        "print(\"\\n\\n\")\n",
+        "print(\"Obfuscated data: \")\n",
+        "print(\"\\nClient side:\")\n",
         "print(client_hash(m, g, q, p, k))\n",
-        "print(server_hash(m, g, q, p, k))"
+        "print(\"\\nServer side: \")\n",
+        "tmp_obf = server_hash(m, g, q, p, k)\n",
+        "print(\"\\nIndividual server computation: \")\n",
+        "print(tmp_obf[1])\n",
+        "print(\"\\nNetwork wide computation: \")\n",
+        "print(tmp_obf[0])\n",
+        "print(\"\\n\\n\")"
       ],
       "metadata": {
+        "id": "foR-_iwfHPxM",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1cb5c809-228b-4d55-d663-c4fb1a68efb9",
-        "id": "foR-_iwfHPxM"
+        "outputId": "e7fb4eae-e9e2-4e99-f902-26015646aaed"
       },
-      "execution_count": 87,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "([32, 30, 99, 7, 2], [658, 35, 1245, 849, 782])\n",
-            "[[1115, 527, 93, 883, 1200], [180, 114, 1006, 1985, 2682]]\n",
-            "([0, 0, 0, 0, 0], [[1115, 527, 93, 883, 1200], [180, 114, 1006, 1985, 2682]])\n",
-            "([32, 30, 99, 7, 2], [878, 9, 584, 2276, 1723])\n",
-            "[[1127, 51, 511, 2325, 1383], [1195, 73, 1211, 1538, 1959]]\n",
-            "([0, 0, 0, 0, 0], [[1127, 51, 511, 2325, 1383], [1195, 73, 1211, 1538, 1959]])\n"
+            "\n",
+            "Clean data: \n",
+            "\n",
+            "Client side:\n",
+            "[222, 984, 31, 862, 893]\n",
+            "\n",
+            "Server side: \n",
+            "[222, 329, 439, 141, 893]\n",
+            "\n",
+            "Individual server computation: \n",
+            "[[184, 974, 457, 908, 79], [10, 1469, 271, 35, 1434]]\n",
+            "\n",
+            "Network wide computation: \n",
+            "[222, 329, 439, 141, 893]\n",
+            "\n",
+            "\n",
+            "\n",
+            "Obfuscated data: \n",
+            "\n",
+            "Client side:\n",
+            "[791, 854, 655, 698, 1260]\n",
+            "\n",
+            "Server side: \n",
+            "[791, 854, 179, 585, 1260]\n",
+            "\n",
+            "Individual server computation: \n",
+            "[[435, 853, 9, 401, 122], [636, 987, 496, 1019, 711]]\n",
+            "\n",
+            "Network wide computation: \n",
+            "[791, 854, 179, 585, 1260]\n",
+            "\n",
+            "\n",
+            "\n"
           ]
         }
       ]
@@ -428,6 +466,7 @@
     {
       "cell_type": "code",
       "source": [
+        "'''\n",
         "print(f\"\"\"\\nmessage (primary key):\\n{obfuscate(m)}\\n\n",
         "obfuscated sub keys (sent to each server):\\n{obfuscate(m, k)}\\n\n",
         "hashes (generated by each server):\\n{S}\\n\n",
@@ -435,54 +474,8 @@
         "product (hashing each block and then adding the hashes - done by the distributed network):\\n{Hp1}\\n\n",
         "k_sum (obfuscated sum_hash):\\n{Hs}\\n\n",
         "k_product (obfuscated product_hash):\\n{Hp}\\n\n",
-        "k_server (obfuscated hashes calculated on the server):\\n{S1}\"\"\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rN7umwdj8B51",
-        "outputId": "dc2aaa67-e6f0-4689-9463-fb5b8f6a187f"
-      },
-      "execution_count": 86,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "message (primary key):\n",
-            "[[113, 119, 101, 114, 116], [121, 117, 105, 111, 112]]\n",
-            "\n",
-            "obfuscated sub keys (sent to each server):\n",
-            "[[6893, 11662, 9494, 7410, 7424], [7381, 11466, 9870, 7215, 7168]]\n",
-            "\n",
-            "hashes (generated by each server):\n",
-            "[[1127, 51, 511, 2325, 1383], [1195, 73, 1211, 1538, 1959]]\n",
-            "\n",
-            "sum_hash (hashing entire message - done by client):\n",
-            "([32, 30, 99, 7, 2], [658, 35, 1245, 849, 782])\n",
-            "\n",
-            "product (hashing each block and then adding the hashes - done by the distributed network):\n",
-            "[0, 0, 0, 0, 0]\n",
-            "\n",
-            "k_sum (obfuscated sum_hash):\n",
-            "([32, 30, 99, 7, 2], [878, 9, 584, 2276, 1723])\n",
-            "\n",
-            "k_product (obfuscated product_hash):\n",
-            "[0, 0, 0, 0, 0]\n",
-            "\n",
-            "k_server (obfuscated hashes calculated on the server):\n",
-            "[[1115, 527, 93, 883, 1200], [180, 114, 1006, 1985, 2682]]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "k_server (obfuscated hashes calculated on the server):\\n{S1}\"\"\")\n",
         "\n",
-        "'''\n",
         "if(sum_hash == product_hash):\n",
         "    print(\"Hashes are equal!\")\n",
         "\n",
@@ -493,25 +486,25 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 146
         },
         "id": "Z8eMpvNF8HTo",
-        "outputId": "16924f60-23b5-43ce-c46f-dc22f880be5f"
+        "outputId": "81bb9894-8bc3-470d-9d58-e544995f2e13"
       },
-      "execution_count": 79,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'\\nif(sum_hash == product_hash):\\n    print(\"Hashes are equal!\")\\n\\nif(k_sum == k_product):\\n    print(\"Obfuscated hashes are equal!\")\\n'"
+              "'\\nprint(f\"\"\"\\nmessage (primary key):\\n{obfuscate(m)}\\n\\nobfuscated sub keys (sent to each server):\\n{obfuscate(m, k)}\\n\\nhashes (generated by each server):\\n{S}\\n\\nsum_hash (hashing entire message - done by client):\\n{Hs1}\\n\\nproduct (hashing each block and then adding the hashes - done by the distributed network):\\n{Hp1}\\n\\nk_sum (obfuscated sum_hash):\\n{Hs}\\n\\nk_product (obfuscated product_hash):\\n{Hp}\\n\\nk_server (obfuscated hashes calculated on the server):\\n{S1}\"\"\")\\n\\nif(sum_hash == product_hash):\\n    print(\"Hashes are equal!\")\\n\\nif(k_sum == k_product):\\n    print(\"Obfuscated hashes are equal!\")\\n'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 39
         }
       ]
     }
