--- a/HomomorphicHashing/WorkingHomomorphicHashing.ipynb
+++ b/HomomorphicHashing/WorkingHomomorphicHashing.ipynb
@@ -333,39 +333,42 @@
     {
       "cell_type": "code",
       "source": [
+        "print(\"\\nHash Function:\\tH(x, a, b, k) = a^(k.x) (mod b)\\n\")\n",
         "print(\"Data generated: \")\n",
         "print(\"\\n\\tInput: \")\n",
-        "print(\"\\t\",inp)\n",
+        "print(\"\\t\", inp)\n",
         "print(\"\\n\\tInput encoded into blocks: \")\n",
-        "print(\"\\t\",m)\n",
+        "print(\"\\t\", m)\n",
         "print(\"\\n\\tPrimes generated (P): \")\n",
-        "print(\"\\t\",p)\n",
-        "print(\"\\n\\tDependent primes (Q: Q % P == 1): \")\n",
+        "print(\"\\t\", p)\n",
+        "print(\"\\n\\tDependent primes (Q[i] | Q[i] % P[i] == 1): \")\n",
+        "print(\"\\t\", q)\n",
+        "print(\"\\n\\tBases (G): \")\n",
         "print(\"\\t\",g)\n",
-        "print(\"\\n\\tFuzz factors: \")\n",
+        "print(\"\\n\\tFuzz factors (K): \")\n",
         "print(\"\\t\",k)\n",
         "print(\"\\n\")\n",
         "\n",
         "print(\"Clean data: \")\n",
         "print(\"\\n\\tClient side:\")\n",
-        "print(\"\\t\",client_tmp)\n",
+        "print(\"\\t\", client_tmp)\n",
         "print(\"\\n\\tServer side: \")\n",
         "print(\"\\n\\tIndividual server computation: \")\n",
-        "print(\"\\t\",server_tmp[1])\n",
+        "print(\"\\t\", server_tmp[1])\n",
         "print(\"\\n\\tNetwork wide computation: \")\n",
-        "print(\"\\t\",server_tmp[0])\n",
+        "print(\"\\t\", server_tmp[0])\n",
         "if(client_tmp == server_tmp[0]):\n",
         "    print(\"\\n\\tHashes are equal!\")\n",
         "print(\"\\n\")\n",
         "\n",
         "print(\"Obfuscated data: \")\n",
         "print(\"\\n\\tClient side:\")\n",
-        "print(\"\\t\",client_tmp_obf)\n",
+        "print(\"\\t\", client_tmp_obf)\n",
         "print(\"\\n\\tServer side: \")\n",
         "print(\"\\n\\tIndividual server computation: \")\n",
-        "print(\"\\t\",server_tmp_obf[1])\n",
+        "print(\"\\t\", server_tmp_obf[1])\n",
         "print(\"\\n\\tNetwork wide computation: \")\n",
-        "print(\"\\t\",server_tmp_obf[0])\n",
+        "print(\"\\t\", server_tmp_obf[0])\n",
         "if(client_tmp_obf == server_tmp_obf[0]):\n",
         "    print(\"\\n\\tObfuscated hashes are equal!\")\n",
         "print(\"\\n\")"
@@ -375,14 +378,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5cd0b1c7-fdea-414e-dc22-9b69c0baf2b8"
+        "outputId": "55d7e72a-08eb-4dff-9d93-e2fe0cf9c508"
       },
-      "execution_count": 88,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "\n",
+            "Hash Function:\tH(x, a, b, k) = a^(k.x) (mod b)\n",
+            "\n",
             "Data generated: \n",
             "\n",
             "\tInput: \n",
@@ -394,10 +400,13 @@
             "\tPrimes generated (P): \n",
             "\t [1009, 1013, 1019, 1021, 1031]\n",
             "\n",
-            "\tDependent primes (Q: Q % P == 1): \n",
+            "\tDependent primes (Q[i] | Q[i] % P[i] == 1): \n",
+            "\t [12109, 6079, 61141, 40841, 37117]\n",
+            "\n",
+            "\tBases (G): \n",
             "\t [58, 73, 80, 78, 57]\n",
             "\n",
-            "\tFuzz factors: \n",
+            "\tFuzz factors (K): \n",
             "\t [30, 21, 33, 32, 40]\n",
             "\n",
             "\n",
@@ -434,88 +443,6 @@
             "\n",
             "\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "'''\n",
-        "# Reference used: \n",
-        "## https://dzone.com/articles/algorithm-week-homomorphic\n",
-        "## Sub References: https://www.cs.cmu.edu/~rwh/theses/okasaki.pdf, https://pdos.csail.mit.edu/papers/otfvec/paper.pdf, \n",
-        "\n",
-        "# Properties of a Homomorphic Function: kH(m + n + o) = H(km) + H(kn) + H(ko) = kH(m) + kH(n) + kH(o)\n",
-        "# the homomorphic hash function is H(x) = g^x mod q\n",
-        "# here, sum = a + b + c + d + e -> sum is the key and a, b, ..., e are the subkeys that are generated from the key\n",
-        "\n",
-        "# p  [1 2 3 4 5]\n",
-        "# q  [1 2 3 4 5]\n",
-        "# g  [1 2 3 4 5]\n",
-        "# h  [1 2 3 4 5]\n",
-        "# m [[1 2 3 4 5]\n",
-        "#    [6 7 8 9 0]]\n",
-        "# Hs [1 2 3 4 5]\n",
-        "# S [[1 2 3 4 5]\n",
-        "#    [6 7 8 9 0]]\n",
-        "# Hp [1 2 3 4 5]\n",
-        "\n",
-        "# test = [[113, 119, 101, 114, 116], [121, 117, 105, 111, 112]]\n",
-        "# print(obfuscate(test))\n",
-        "\n",
-        "# Hp = [0 for j in range(BLOCK_LEN)] # public\n",
-        "# Hs = [0 for j in range(BLOCK_LEN)] # public\n",
-        "\n",
-        "Hs1 = client_hash(m, g, q, p)\n",
-        "\n",
-        "# hashes computed at each server, same length as the input + padding\n",
-        "Hp1 = server_hash(m, g, q, p)\n",
-        "\n",
-        "Hs = client_hash(m, g, q, p, k)\n",
-        "\n",
-        "# hashes computed at each server, same length as the input + padding - it has also been obfuscated\n",
-        "\n",
-        "Hp = server_hash(m, g, q, p, k)\n",
-        "\n",
-        "print(f\"\"\"\\nmessage (primary key):\\n{obfuscate(m)}\\n\n",
-        "obfuscated sub keys (sent to each server):\\n{obfuscate(m, k)}\\n\n",
-        "hashes (generated by each server):\\n{S}\\n\n",
-        "sum_hash (hashing entire message - done by client):\\n{Hs1}\\n\n",
-        "product (hashing each block and then adding the hashes - done by the distributed network):\\n{Hp1}\\n\n",
-        "k_sum (obfuscated sum_hash):\\n{Hs}\\n\n",
-        "k_product (obfuscated product_hash):\\n{Hp}\\n\n",
-        "k_server (obfuscated hashes calculated on the server):\\n{S1}\"\"\")\n",
-        "\n",
-        "if(sum_hash == product_hash):\n",
-        "    print(\"Hashes are equal!\")\n",
-        "\n",
-        "if(k_sum == k_product):\n",
-        "    print(\"Obfuscated hashes are equal!\")\n",
-        "\n",
-        "'''"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 109
-        },
-        "id": "Z8eMpvNF8HTo",
-        "outputId": "d1008fdf-8f7a-432a-e53e-ca98b52fa7cf"
-      },
-      "execution_count": 89,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'\\n# Reference used: \\n## https://dzone.com/articles/algorithm-week-homomorphic\\n## Sub References: https://www.cs.cmu.edu/~rwh/theses/okasaki.pdf, https://pdos.csail.mit.edu/papers/otfvec/paper.pdf, \\n\\n# Properties of a Homomorphic Function: kH(m + n + o) = H(km) + H(kn) + H(ko) = kH(m) + kH(n) + kH(o)\\n# the homomorphic hash function is H(x) = g^x mod q\\n# here, sum = a + b + c + d + e -> sum is the key and a, b, ..., e are the subkeys that are generated from the key\\n\\n# p  [1 2 3 4 5]\\n# q  [1 2 3 4 5]\\n# g  [1 2 3 4 5]\\n# h  [1 2 3 4 5]\\n# m [[1 2 3 4 5]\\n#    [6 7 8 9 0]]\\n# Hs [1 2 3 4 5]\\n# S [[1 2 3 4 5]\\n#    [6 7 8 9 0]]\\n# Hp [1 2 3 4 5]\\n\\n# test = [[113, 119, 101, 114, 116], [121, 117, 105, 111, 112]]\\n# print(obfuscate(test))\\n\\n# Hp = [0 for j in range(BLOCK_LEN)] # public\\n# Hs = [0 for j in range(BLOCK_LEN)] # public\\n\\nHs1 = client_hash(m, g, q, p)\\n\\n# hashes computed at each server, same length as the input + padding\\nHp1 = server_hash(m, g, q, p)\\n\\nHs = client_hash(m, g, q, p, k)\\n\\n# hashes computed at each server, same length as the input + padding - it has also been obfuscated\\n\\nHp = server_hash(m, g, q, p, k)\\n\\nprint(f\"\"\"\\nmessage (primary key):\\n{obfuscate(m)}\\n\\nobfuscated sub keys (sent to each server):\\n{obfuscate(m, k)}\\n\\nhashes (generated by each server):\\n{S}\\n\\nsum_hash (hashing entire message - done by client):\\n{Hs1}\\n\\nproduct (hashing each block and then adding the hashes - done by the distributed network):\\n{Hp1}\\n\\nk_sum (obfuscated sum_hash):\\n{Hs}\\n\\nk_product (obfuscated product_hash):\\n{Hp}\\n\\nk_server (obfuscated hashes calculated on the server):\\n{S1}\"\"\")\\n\\nif(sum_hash == product_hash):\\n    print(\"Hashes are equal!\")\\n\\nif(k_sum == k_product):\\n    print(\"Obfuscated hashes are equal!\")\\n\\n'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 89
         }
       ]
     }
