--- a/HomomorphicHashing/WorkingHomomorphicHashing.ipynb
+++ b/HomomorphicHashing/WorkingHomomorphicHashing.ipynb
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "wr2MJouw9Zy-"
       },
-      "execution_count": 71,
+      "execution_count": 117,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "75-X0Cg63Jk-"
       },
-      "execution_count": 72,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "Wq0c5dI48yP1"
       },
-      "execution_count": 73,
+      "execution_count": 119,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "rN1Rmmqt82Ea"
       },
-      "execution_count": 74,
+      "execution_count": 120,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
       "metadata": {
         "id": "oLVgrXzA8V7n"
       },
-      "execution_count": 75,
+      "execution_count": 121,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "37Om2DGu8lur"
       },
-      "execution_count": 76,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -186,7 +186,7 @@
       "metadata": {
         "id": "ov8RwO9t8dyx"
       },
-      "execution_count": 77,
+      "execution_count": 123,
       "outputs": []
     },
     {
@@ -217,7 +217,7 @@
       "metadata": {
         "id": "NKR0WUZe8gqp"
       },
-      "execution_count": 78,
+      "execution_count": 124,
       "outputs": []
     },
     {
@@ -225,7 +225,7 @@
       "source": [
         "# Variables used in the script\n",
         "# get password from the user\n",
-        "inp = input(\"10 Characters: \") # private\n",
+        "inp = input(f\"Enter a password with exactly {PASS_LEN} characters: \") # private\n",
         "# 'qwertyuiop'  \n",
         "inp += ' '*(PASS_LEN-len(inp))\n",
         "# hash message\n",
@@ -237,15 +237,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IOWUDote2IVm",
-        "outputId": "af6d7fce-65b6-4785-f9eb-180e33d04884"
+        "outputId": "d800ab4a-b7a9-46a1-a69c-8ff7d44b2c7b"
       },
-      "execution_count": 79,
+      "execution_count": 125,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "10 Characters: qwertyuiop\n"
+            "Enter a password with exactly 10 characters: ACM rocks\n"
           ]
         }
       ]
@@ -260,7 +260,7 @@
       "metadata": {
         "id": "F3d35vFX3fiC"
       },
-      "execution_count": 80,
+      "execution_count": 126,
       "outputs": []
     },
     {
@@ -270,26 +270,10 @@
         "q = [keygen(x) for x in p] # public"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d95JbPTs3iry",
-        "outputId": "40b94fd4-482c-49d4-a4aa-c27231fe6451"
+        "id": "d95JbPTs3iry"
       },
-      "execution_count": 81,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "keygen(1009): [10091, 12109, 30271, 40361, 42379] - 12109\n",
-            "keygen(1013): [2027, 6079, 12157, 20261, 26339] - 6079\n",
-            "keygen(1019): [2039, 32609, 38723, 50951, 61141] - 61141\n",
-            "keygen(1021): [10211, 12253, 18379, 30631, 40841] - 40841\n",
-            "keygen(1031): [2063, 12373, 30931, 32993, 37117] - 37117\n"
-          ]
-        }
-      ]
+      "execution_count": 127,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -300,7 +284,7 @@
       "metadata": {
         "id": "MvzdF-_p3lle"
       },
-      "execution_count": 82,
+      "execution_count": 128,
       "outputs": []
     },
     {
@@ -312,7 +296,7 @@
       "metadata": {
         "id": "bOS4TSQOPVVK"
       },
-      "execution_count": null,
+      "execution_count": 129,
       "outputs": []
     },
     {
@@ -327,50 +311,50 @@
       "metadata": {
         "id": "MO-7_NSDIZFI"
       },
-      "execution_count": 83,
+      "execution_count": 130,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(\"\\nHash Function:\\tH(x, a, b, k) = a^(k.x) (mod b)\\n\")\n",
+        "print(\"\\nHash Function:\\n\\t H(x, a, b, k) = a^(k.x) (mod b)\\n\")\n",
         "print(\"Data generated: \")\n",
-        "print(\"\\n\\tInput: \")\n",
+        "print(\"\\n\\t Input (inp): \")\n",
         "print(\"\\t\", inp)\n",
-        "print(\"\\n\\tInput encoded into blocks: \")\n",
+        "print(\"\\n\\t Input encoded into blocks (M): \")\n",
         "print(\"\\t\", m)\n",
-        "print(\"\\n\\tPrimes generated (P): \")\n",
+        "print(\"\\n\\t Primes generated (P): \")\n",
         "print(\"\\t\", p)\n",
-        "print(\"\\n\\tDependent primes (Q[i] | Q[i] % P[i] == 1): \")\n",
+        "print(\"\\n\\t Dependent primes (Q[i] | Q[i] % P[i] == 1): \")\n",
         "print(\"\\t\", q)\n",
-        "print(\"\\n\\tBases (G): \")\n",
-        "print(\"\\t\",g)\n",
-        "print(\"\\n\\tFuzz factors (K): \")\n",
-        "print(\"\\t\",k)\n",
+        "print(\"\\n\\t Bases (G): \")\n",
+        "print(\"\\t\", g)\n",
+        "print(\"\\n\\t Fuzz factors (K): \")\n",
+        "print(\"\\t\", k)\n",
         "print(\"\\n\")\n",
         "\n",
         "print(\"Clean data: \")\n",
-        "print(\"\\n\\tClient side:\")\n",
-        "print(\"\\t\", client_tmp)\n",
-        "print(\"\\n\\tServer side: \")\n",
+        "print(\"\\nClient: \")\n",
+        "print(\"\\n\\tClient's Hash: \", client_tmp)\n",
+        "print(\"\\nServers: \")\n",
         "print(\"\\n\\tIndividual server computation: \")\n",
-        "print(\"\\t\", server_tmp[1])\n",
+        "print(\"\\tServer's hash: \", server_tmp[1])\n",
         "print(\"\\n\\tNetwork wide computation: \")\n",
-        "print(\"\\t\", server_tmp[0])\n",
+        "print(\"\\tDistributed hash: \", server_tmp[0])\n",
         "if(client_tmp == server_tmp[0]):\n",
-        "    print(\"\\n\\tHashes are equal!\")\n",
+        "    print(\"\\nChecking:\\n\\n\\tHashes are equal!\")\n",
         "print(\"\\n\")\n",
         "\n",
         "print(\"Obfuscated data: \")\n",
-        "print(\"\\n\\tClient side:\")\n",
-        "print(\"\\t\", client_tmp_obf)\n",
-        "print(\"\\n\\tServer side: \")\n",
+        "print(\"\\nClient: \")\n",
+        "print(\"\\n\\tClient's Hash: \", client_tmp_obf)\n",
+        "print(\"\\nServers: \")\n",
         "print(\"\\n\\tIndividual server computation: \")\n",
-        "print(\"\\t\", server_tmp_obf[1])\n",
+        "print(\"\\tServer's Hash: \", server_tmp_obf[1])\n",
         "print(\"\\n\\tNetwork wide computation: \")\n",
-        "print(\"\\t\", server_tmp_obf[0])\n",
+        "print(\"\\tDistributed hash: \", server_tmp_obf[0])\n",
         "if(client_tmp_obf == server_tmp_obf[0]):\n",
-        "    print(\"\\n\\tObfuscated hashes are equal!\")\n",
+        "    print(\"\\nChecking:\\n\\n\\tObfuscated hashes are equal!\")\n",
         "print(\"\\n\")"
       ],
       "metadata": {
@@ -378,66 +362,73 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "55d7e72a-08eb-4dff-9d93-e2fe0cf9c508"
+        "outputId": "bfd60b36-8432-4719-ba57-6a4a5276b9ee"
       },
-      "execution_count": 91,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Hash Function:\tH(x, a, b, k) = a^(k.x) (mod b)\n",
+            "Hash Function:\n",
+            "\t H(x, a, b, k) = a^(k.x) (mod b)\n",
             "\n",
             "Data generated: \n",
             "\n",
-            "\tInput: \n",
-            "\t qwertyuiop\n",
+            "\t Input (inp): \n",
+            "\t ACM rocks \n",
             "\n",
-            "\tInput encoded into blocks: \n",
-            "\t [[113, 119, 101, 114, 116], [121, 117, 105, 111, 112]]\n",
+            "\t Input encoded into blocks (M): \n",
+            "\t [[65, 67, 77, 32, 114], [111, 99, 107, 115, 32]]\n",
             "\n",
-            "\tPrimes generated (P): \n",
+            "\t Primes generated (P): \n",
             "\t [1009, 1013, 1019, 1021, 1031]\n",
             "\n",
-            "\tDependent primes (Q[i] | Q[i] % P[i] == 1): \n",
-            "\t [12109, 6079, 61141, 40841, 37117]\n",
+            "\t Dependent primes (Q[i] | Q[i] % P[i] == 1): \n",
+            "\t [12109, 20261, 38723, 30631, 37117]\n",
             "\n",
-            "\tBases (G): \n",
-            "\t [58, 73, 80, 78, 57]\n",
+            "\t Bases (G): \n",
+            "\t [99, 51, 87, 100, 76]\n",
             "\n",
-            "\tFuzz factors (K): \n",
-            "\t [30, 21, 33, 32, 40]\n",
+            "\t Fuzz factors (K): \n",
+            "\t [26, 36, 18, 38, 34]\n",
             "\n",
             "\n",
             "Clean data: \n",
             "\n",
-            "\tClient side:\n",
-            "\t [10552, 2062, 39610, 34827, 4925]\n",
+            "Client: \n",
             "\n",
-            "\tServer side: \n",
+            "\tClient's Hash:  [7202, 19084, 1342, 14531, 22183]\n",
+            "\n",
+            "Servers: \n",
             "\n",
             "\tIndividual server computation: \n",
-            "\t [[6853, 2106, 9262, 20574, 25675], [6117, 2137, 52458, 21113, 25805]]\n",
+            "\tServer's hash:  [[5988, 4531, 26863, 20204, 14146], [4535, 13361, 1221, 7143, 23855]]\n",
             "\n",
             "\tNetwork wide computation: \n",
-            "\t [10552, 2062, 39610, 34827, 4925]\n",
+            "\tDistributed hash:  [7202, 19084, 1342, 14531, 22183]\n",
+            "\n",
+            "Checking:\n",
             "\n",
             "\tHashes are equal!\n",
             "\n",
             "\n",
             "Obfuscated data: \n",
             "\n",
-            "\tClient side:\n",
-            "\t [485, 1043, 23172, 30269, 28928]\n",
+            "Client: \n",
             "\n",
-            "\tServer side: \n",
+            "\tClient's Hash:  [9884, 5640, 7621, 16350, 19181]\n",
+            "\n",
+            "Servers: \n",
             "\n",
             "\tIndividual server computation: \n",
-            "\t [[7828, 3030, 5660, 6260, 374], [9187, 1170, 35306, 19388, 5238]]\n",
+            "\tServer's Hash:  [[9743, 7194, 13091, 18540, 8849], [2217, 11424, 36582, 1240, 31314]]\n",
             "\n",
             "\tNetwork wide computation: \n",
-            "\t [485, 1043, 23172, 30269, 28928]\n",
+            "\tDistributed hash:  [9884, 5640, 7621, 16350, 19181]\n",
+            "\n",
+            "Checking:\n",
             "\n",
             "\tObfuscated hashes are equal!\n",
             "\n",
